2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PROG_YACC, GROFF_URW_FONTS_CHECK,
	GROFF_WITH_COMPATIBILITY_WRAPPERS, GROFF_UCHARDET_NOTICE):
	Improve shell code portability.  Per the GNU Autoconf manual,
	"The -a, -o, '(', and ')' operands are not present in all
	implementations, and have been marked obsolete by Posix 2008.
	...portable uses of test should never have more than four
	arguments, and scripts should use shell constructs like '&&' and
	'||' instead."

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.1.man (Installation directories): Don't
	output a tagged paragraph for the X11 application defaults
	directory if the build symbol '@APPRESDIR@' is not defined (that
	is, we didn't build with X11 support).

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_GHOSTSCRIPT_VERSION_CHECK): Fix code style
	nits.  Use lowercase for shell variables we define.  Don't quote
	literal operands to test(1) that don't contain syntactically
	shell-significant characters.  Update indentation to match
	recent practice.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_NOTICE): Don't emit the notice if
	Ghostscript isn't available, since it was a prerequisite for
	the `GROFF_URW_FONTS_CHECK` macro in the first place.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Add print spooler determination to configuration
	report.

	* m4/groff.m4 (GROFF_PRINT): Add shell variable
	`groff_have_spooler` to house the name of the print spooler
	{"lp" or "lpr"} or the word "no".
	* configure.ac: Report determined spooler, or its absence.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/tests/do-not-seek-the-unseekable.sh: Skip
	seekability check of the standard input stream if there is no
	controlling terminal.
